life is a rainbow of colors

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,2 +1,4 @@
-
 <canvas id="board" width="1500" height="1500"></canvas>
+</br>
+<button name="shape-button" data-shape='circle'>Circles</button>
+<button name="shape-button" data-shape='none'>Squares</button>
